--- a/ByteBank_ADM/ByteBank_ADM.csproj
+++ b/ByteBank_ADM/ByteBank_ADM.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Funcionarios\GerenteDeContas.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SistemaInternoU\Autenticavel.cs" />
     <Compile Include="SistemaInternoU\SistemaInterno.cs" />
     <Compile Include="Utilitario\GerenciadorDeBonificacao.cs" />
   </ItemGroup>
