--- a/ByteBank_ADM/ByteBank_ADM.csproj
+++ b/ByteBank_ADM/ByteBank_ADM.csproj
@@ -47,10 +47,13 @@
     <Compile Include="Funcionarios\Designer.cs" />
     <Compile Include="Funcionarios\Diretor.cs" />
     <Compile Include="Funcionarios\Funcionario.cs" />
+    <Compile Include="Funcionarios\FuncionarioAutenticavel.cs" />
     <Compile Include="Funcionarios\GerenteDeContas.cs" />
+    <Compile Include="Interface\IBonificacao.cs" />
+    <Compile Include="Parceria\ParceiroComercial.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SistemaInternoU\Autenticavel.cs" />
+    <Compile Include="SistemaInternoU\IAutenticavel.cs" />
     <Compile Include="SistemaInternoU\SistemaInterno.cs" />
     <Compile Include="Utilitario\GerenciadorDeBonificacao.cs" />
   </ItemGroup>
